# fastapi

./: items_views.py  main.py  pyproject.toml
users/: schemas.py  views.py
