[project]
name = "suren"
version = "0.1.0"
description = ""
authors = [
    {name = "Pavlo Starobub",email = "starodub.pavlo@alsodev.md"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.124.4,<0.125.0)",
    "uvicorn[standart] (>=0.38.0,<0.39.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
